--- a/frontend/src/app/todo-list/todo-list.component.scss
+++ b/frontend/src/app/todo-list/todo-list.component.scss
@@ -1,3 +1,35 @@
-/**
- * Add component specific styles here
- */
+.todo-list {
+  max-width: 500px;
+  margin: 0 auto;
+
+  input[type="text"] {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 16px;
+  }
+
+  ul {
+    list-style-type: none;
+    padding: 0;
+
+    li {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 8px;
+      margin-bottom: 8px;
+      background-color: #f5f5f5;
+
+      &.completed {
+        text-decoration: line-through;
+        color: #888;
+      }
+
+      button {
+        margin-left: 16px;
+        padding: 4px 8px;
+        cursor: pointer;
+      }
+    }
+  }
+}
